--- a/www/login.html
+++ b/www/login.html
@@ -7,27 +7,59 @@
 </head>
 
 <body>
-    <div class="login-container">
-        <div id="main">
-            <h1>Sign In</h1>
-            <input id="email" type="text" placeholder="Email"></input>
-            <input id="password" type="password" placeholder="Password"></input>
-            <button id="submit">Submit</button>
-            <p><span>or</span></p>
-            <button id="sign-up">Sign Up</button>
+    <div class="container">
+        <input type="checkbox" id="check">
+        <div class="login form">
+            <header>Login</header>
+            <form action="#">
+                <input type="text" id='inUsr' placeholder="Enter your email">
+                <input type="password" id="inPass" placeholder="Enter your password">
+                <span class="signup">
+          <a href="#" id="forgotLabel">Forgot password?</a>
+        </span>
+                <input type="button" class="button loginbtn" value="Login">
+            </form>
+            <div class="signup">
+                <span class="signup">Don't have an account?
+          <a href="#" id="signupLabel">Signup</a>
+        </span>
+            </div>
         </div>
-
-        <div id="create-acct">
-            <h1>Create an Account</h1>
-            <input id="email-signup" type="text" placeholder="Email *"></input>
-            <input id="confirm-email-signup" type="email" placeholder="Confirm Email *"></input>
-            <input id="password-signup" type="password" placeholder="Password *"></input>
-            <input id="confirm-password-signup" type="password" placeholder="Confirm Password *"></input>
-            <button id="create-acct-btn">Create Account</button>
-            <button id="return-btn">Return to Login</button>
+        <div class="registration form">
+            <header>Signup</header>
+            <form action="#">
+                <input type="text" id="name" placeholder="Enter your name">
+                <input type="text" id='username' placeholder="Enter your username">
+                <input type="text" id='email' placeholder="Enter your email">
+                <input type="password" id='password' placeholder="Create a password">
+                <input type="button" class="button signupbtn" value="Signup">
+            </form>
+            <div class="signup">
+                <span class="signup">Already have an account?
+          <a href="#" id="loginLabel">Login</a>
+        </span>
+            </div>
+        </div>
+        <div class="forgot form">
+            <header>Forgot Password</header>
+            <form action="#">
+                <input type="text" id='forgotinp' placeholder="Enter your email">
+                <input type="button" class="button forgotbtn" value="Submit">
+            </form>
+            <div class="signup">
+                <span class="signup">Don't have an account?
+          <a href="#" id="signupLabel">Signup</a>
+        </span>
+            </div>
+            <div class="signup">
+                <span class="signup">Already have an account?
+          <a href="#" id="loginLabel">Login</a>
+        </span>
+            </div>
         </div>
     </div>
-    <script type="module" src="script.js"></script>
+    <script src="page0.js" type="module"></script>
+    <script type="module" src="login.js"></script>
 </body>
 
 </html>
