updating package.json

--- a/www/login.html
+++ b/www/login.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-    <script src="page0.js" type="module"></script>
+    <script type="module" src="page0.js"></script>
     <script type="module" src="login.js"></script>
 </body>
 
